--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine on
 
 RewriteRule ^(search|contact|registration)$ $1.php [NC,L]
+
+RewriteRule ^post/(\d+)$ posts_by_hany.php?p_id=$1 [NC,L]
